Nov 5, 2023. (Close to final product?)

--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -400,7 +400,7 @@
     <!-- Testimonial Section End -->
 
 <!-- Footer Section Begin -->
-<section class="footer-section" th:replace="footer">
+<section class="footer-section" th:replace="~{footer}">
 </section>
 <!-- Footer Section End -->
 
@@ -408,7 +408,7 @@
     programsRepo
     <!-- Search model end -->
 
-    <!-- Js Plugins -->
+    <!-- Js Plugins -->2
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.magnific-popup.min.js"></script>
