--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -103,6 +103,7 @@
                             </ul>
                         </li>
                         <li><a th:href="${user == null ? '/userRegistration' : '/userLogin'}">Registration</a></li>
+                        <li><a href="/userLogin">Login</a></li>
                     </ul>
                 </nav>
             </div>
