--- a/src/main/resources/templates/404pending.html
+++ b/src/main/resources/templates/404pending.html
@@ -123,6 +123,7 @@
 							</ul>
 						</li>
 						<li><a href="userRegistration">Registration</a></li>
+						<li><a href="/userLogin">Login</a></li>
 					</ul>
 				</nav>
 			</div>
