--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,3 +1,4 @@
+<html lang="zxx" xmlns:th="http://www.thymeleaf.org">
 <div class="container-fluid">
   <div class="row" style="padding-top:0px">
     <div class="col-lg-3" style="padding-left:50px;">
@@ -27,6 +28,9 @@
             </ul>
           </li>
           <li><a href="contact">Contact</a></li>
+          <li><a th:href="${user == null ? '/userRegistration' : '/userLogin'}">Registration</a></li>
+
+          <li><a href="/userLogin">Login</a></li>
         </ul>
       </nav>
     </div>
