--- a/src/main/resources/templates/userRegistration.html
+++ b/src/main/resources/templates/userRegistration.html
@@ -121,7 +121,10 @@
                                 <!--                                    <li><a href="/404">404</a></li>-->
                             </ul>
                         </li>
-                        <li class="active"><a href="userRegistration">Registration</a></li>
+
+                        <li class="active"><a th:href="${user == null ? '/userRegistration' : '/userLogin'}">Registration</a></li>
+
+                        <li><a href="/userLogin">Login</a></li>
                     </ul>
                 </nav>
             </div>
