--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -62,7 +62,7 @@
             <li><a href="/about-us">About</a></li>
 <!--            <li><a href="/blog">Blog</a></li>-->
             <li><a href="/services">Services</a></li>
-            <li><a href="/contact">Contact</a></li>
+<!--            <li><a href="/contact">Contact</a></li>-->
           </ul>
         </div>
       </div>
