--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -37,7 +37,7 @@
       <div class="col-lg-12">
         <div class="text-404">
           <h1>Thank you!</h1>
-          <h3>We have sent you an email for your registration information!</h3>
+          <h3>We have emailed you for your registration information!</h3>
           <p>Looking forward to dominating and conquering this fitness journey with you!</p>
 <!--          <form action="#" class="search-404">-->
 <!--            <input type="text" placeholder="Enter your keyword">-->
